Adição de Paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum laudantium provident nostrum, fuga, nulla dolorum quam eum corporis repudiandae vero animi sequi? Dolorem ea aperiam magnam nesciunt inventore tempora odit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo est consequatur voluptates veniam recusandae, excepturi obcaecati ex iure at optio veritatis aspernatur expedita molestias alias! Quis exercitationem facilis tempore sint?</p>
     
 </body>
 </html>
